--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hi All this is my first web site and you are the first visitor
+<html>
+<head>
+<title>
+Hello Ashish
+</title)
+</head>
+
+<body>
+<h1>
+This is my first website, please have a look
+</h1>
+</body>
+
+</html>
